fix top app bar title text overflow

--- a/css/mdc.top.app.bar.css
+++ b/css/mdc.top.app.bar.css
@@ -70,8 +70,7 @@
 }
 
 #mdc-top-app-bar > .title {
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+    display: inline;
     font-size: 1.25rem;
     line-height: 2rem;
     letter-spacing: 0.0125em;
